--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Home</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
             document.getElementById("welcome-message").innerText = `Welcome ${user.username}!`;
         }
     };
-    req.open("GET", "http://localhost:3000/user", true);
+    req.open("GET", "http://localhost:8000/user", true);
     req.send();
 </script>
 </html>
